# mkch

./: .prettierrc  README.md  TODOS.md  components.json  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  user_settings.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_handling.rs  lib.rs  main.rs  markov_logic.rs  matrix.rs  types.rs
src/WindowShell/: TitleBar.module.css  TitleBar.tsx  WindowShell.module.css  WindowShell.tsx
src/assets/fonts/CommitMonoV143/: custom-settings.json
src/components/: ThemeProvider.tsx
src/components/ConfigMenu/: ConfigMenu.module.css  ConfigMenu.tsx
src/components/ResizableBox/: ResizableBox.module.css  ResizableBox.tsx  index.ts
src/components/SharedDataProvider/: SharedDataProvider.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Table/: Table.module.css  Table.tsx
src/components/ui/: button.tsx  slider.tsx
src/providers/SharedDataProvider/: SharedDataProvider.tsx
src/screens/ControlsView/: ChainValidation.ts  ControlsView.module.css  ControlsView.tsx  index.ts
src/screens/GraphView/: GraphView.module.css  GraphView.tsx  index.ts
src/screens/Home/: Home.tsx
src/screens/MarkovChain/: MarkovChain.tsx  index.ts
src/screens/MarkovView/: ChainValidation.ts  MarkovView.module.css  MarkovView.tsx  index.ts
src/screens/ProjectView/: ProjectView.module.css  ProjectView.tsx
src/screens/StatesView/: StatesView.module.css  StatesView.tsx  index.ts
src/types/: index.ts
(+8 files in other folders)
